h1. Changes

h2. Ruber 0.0.9

h3. Features

* Made the Auto End plugin recognize some other keywords: @unless@, @for@, @while@,
  @until@ (the last two were already recognized when followed by a @do@)
  
* Added environments

h2. Ruber 0.0.8

h3. Features

* Added a new plugin: Auto End. As the name says, it automatically inserts @end@
  keywords after @module@, @class@, @if@... Its implementation is a bit naive at
  the moment (in particular, it doesn't know whether the current line is in the
  middle of a string or of a block comment), so it can insert @end@ in the wrong
  places. If it does, just Undo the last action and the end'll go away
* Changed the way you open a file in the editor from a tool widget without closing
  the tool widget itself. Now there's a little button on the right of the tool
  widget with a pin on it. Clicking on it prevents the widget being closed when
  clicking on a file name. This change was made because the Meta key is now used
  for something else
* When clicking on a file name while keeping the Meta key pressed, a new editor
  for the file is open (even if there was already one open). The new editor can
  be opened by splitting the current editor or in a new tab, depending on an
  option chosen by the user
* The RSpec tool widget now displays an horizontal scroll bar if a failure description
  is too long to fit on the tool widget. Unfortunately, I haven't as yet found
  out how to do the same for the example descriptions
* Replaced Switch to File and Switch to Spec menu entries in the Ruby/Test menu
  with a single menu entry, which changes its name and behaviour depending on
  whether the current file is a spec file or not
* Added an option allowing to choose whether switching from spec file to code file
  (and the other way round) should be done by opening another tab or splitting
  the current editor
* Added a widget to display the output in the Command plugin. The widget is hidden
  by default and can be shown using a button